# PacmanCG

./: CMakeLists.txt  Pacman.md  Pacman项目说明.md  README.md  main.cpp
include/: ball.h  game.h  game_level.h  game_object.h  monster.h  resource_manager.h  shader.h  sprite_renderer.h  texture.h
include/shaders/: vanilla.vs
resources/levels/: test.lvl
src/: ball.cpp  game.cpp  game_level.cpp  game_object.cpp  monster.cpp  resource_manager.cpp  shader.cpp  sprite_renderer.cpp  stb_image_wrapper.cpp  texture.cpp
